# rest-keystore-cpp

./: CMakeLists.txt  Cred.h  Makefile  cmake_install.cmake  cryptopp_wrapper.h  keystore-http-server.cpp  testwrapper.cpp
crypto/: cryptopp_wrapper.h
tests/crypto-keys/: mykey  mykey.pub
tests/json-test/: get_creds.json  new_creds.json
